--- a/cs/index.html
+++ b/cs/index.html
@@ -7,7 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací.">
 		<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
-		<title>Oficiální web projektu SFERA, sociální síť.</title>
+  	<link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
+  	<link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
+  	<link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
+  	<title>Oficiální web projektu SFERA, sociální síť.</title>
 		<link rel="stylesheet" href="../assets/css/landing.css">
 		<link rel="stylesheet" href="../assets/css/landing-card.css">
 		<link rel="stylesheet" href="../assets/css/main.e1ae0bf9.css">
@@ -145,16 +148,16 @@
 				<div class="langs">
 					<img class="langs_image" src="../assets/img/language_24px.svg" alt="">
 					<ul class="langs__list">
-						<li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
+						<li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS<img class="langs-image" src="../assets/img/favicons/cz.svg" alt="vlajka Česká"></a>
 							<div class="dropdown-menu__content langs__submenu">
 								<ul class="langs__list">
-									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../index.html">EN</a></li>
-									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/index.html">RU</a></li>
+									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../index.html">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="vlajka angličtina"></a></li>
+									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/index.html">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="vlajka ruská"></a></li>
 								</ul>
 							</div>
 						</li>
 					</ul>
-				</div>
+			</div>
 			</nav>
 			<main>
 			<section class="section__landing">
@@ -193,7 +196,8 @@
 			<section class="section-as" id="abot-us">
 				<p class="section-as-heading">ZJISTI<span class="section-as-heading-color"> O NÁS</span> VÍC</p>
 				<div class="section-as-video">
-					<iframe class="section-as-iframe-video" src="http://www.youtube.com/embed/SKOo0AYtYJg" frameborder="0" allowfullscreen></iframe>
+					<iframe class="section-as-iframe-video" src="https://www.youtube.com/embed/Ok8da78v8tA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				</div>
 				</div>
 			</section>
 			<p class="section-about-as-heading"><span class="about-as-heading-color">BUĎ PRVNÍ </span> – POMOZ NÁM<br> OTESTOVAT APLIKACI</p>
