--- a/cs/team.html
+++ b/cs/team.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta property="description" content="Описание страницы">
-    <link rel="icon" href="assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
+    <meta name="description" content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací.">
+	<title>Oficiální web projektu SFERA, sociální síť.</title>
+    <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
     <title>SFERA</title>
     <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
 
@@ -147,11 +148,11 @@
             <div class="langs">
                 <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
                 <ul class="langs__list">
-                    <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
+                    <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS<img class="langs-image" src="../assets/img/favicons/cz.svg" alt="vlajka Česká"></a>
                         <div class="dropdown-menu__content langs__submenu">
                             <ul class="langs__list">
-                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/team.html">EN</a></li>
-                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/team.html">RU</a></li>
+                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/team.html">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="vlajka angličtina"></a></li>
+                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/team.html">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="vlajka ruská"></a></li>
 
                             </ul>
                         </div>
