--- a/en/apps.html
+++ b/en/apps.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="description" content="Описание страницы">
-  <link rel="icon" href="/assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
-  <link rel="icon" href="/assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
-  <link rel="icon" href="/assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
+  <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
   <meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SPHERE platform, dozens of applications interact closely with each other.">
   <meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <title>SFERA Project &#x2d; Official website, social network.</title>
@@ -150,11 +150,11 @@
       <div class="langs">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
-          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">EN</a>
+          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="flag english"></a>
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/apps.html">RU</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/apps.html">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/apps.html">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="russian flag"></a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/apps.html">CS<img class="langs-image" src="../assets/img/favicons/cz.svg" alt="czech flag"></a></li>
               </ul>
 
             </div>
