--- a/en/news.html
+++ b/en/news.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="description" content="Описание страницы">
-    <link rel="icon" href="/assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="/assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="/assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
+    <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
     <title>SFERA Project &#x2d; Official website, social network.</title>
     <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
     <link href="../assets/css/styles.af24c77d.css" rel="stylesheet">
@@ -147,11 +147,11 @@
       <div class="langs">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
-          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">EN</a>
+          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="flag english"></a>
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/news.html">RU</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/news.html">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/news.html">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="russian flag"></a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/news.html">CS<img class="langs-image" src="../assets/img/favicons/cz.svg" alt="czech flag"></a></li>
               </ul>
 
             </div>
@@ -193,6 +193,7 @@
                           <p>iOS users can also block users in ASAP, and voice messages from Android now arrive without bugs.
                             In addition to all of the above, many other bugs have been fixed, which you help us identify.</p> 
                           <p>Use SFERA, improve your rating and don’t forget to send us suggestions on  how to do better the app.</p>
+                          
                       </div>
                     </div>
                   </div>
