--- a/ru/apps.html
+++ b/ru/apps.html
@@ -5,18 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="description" content="Описание страницы">
-  <link rel="icon" href="/assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
-  <link rel="icon" href="/assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
-  <link rel="icon" href="/assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-
+  <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
+  <meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
+  <meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <title>SFERA</title>
-    <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/apps.css">
-    <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/css/header.css">
-    <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
-
+  <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps.css">
+  <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 </head>
 
 <body>
@@ -148,18 +148,18 @@
               </ul>
           </div>
           <div class="langs">
-              <img class="langs_image"src="../assets/img/language_24px.svg" alt="">
-              <ul class="langs__list">
-                  <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
-                      <div class="dropdown-menu__content langs__submenu">
-                          <ul class="langs__list">
-                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/apps.html">EN</a></li>
-                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/apps.html">CS</a></li>
-                          </ul>
-                      </div>
-                  </li>
-              </ul>
-          </div>
+            <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
+            <ul class="langs__list">
+                <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="флаг русский"></a>
+                    <div class="dropdown-menu__content langs__submenu">
+                        <ul class="langs__list">
+                            <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/apps.html">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="флаг английский"></a></li>
+                            <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/apps.html">CS<img class="langs-image" src="../assets/img/favicons/cz.svg" alt="флаг чешский"></a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
       </nav>
       <main>
       <article class="apps">
