--- a/ru/index.html
+++ b/ru/index.html
@@ -7,6 +7,9 @@
 		<meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
 		<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
+		<link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
 		<link rel="stylesheet" href="../assets/css/landing.css">
 		<link rel="stylesheet" href="../assets/css/landing-card.css">
 		<link rel="stylesheet" href="../assets/css/main.e1ae0bf9.css">
@@ -147,18 +150,16 @@
 				<div class="langs">
 					<img class="langs_image" src="../assets/img/language_24px.svg" alt="">
 					<ul class="langs__list">
-						<li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
-							<div class="dropdown-menu__content langs__submenu">
-								<ul class="langs__list">
-									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../index.html">EN</a></li>
-									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/index.html">CS</a></li>
-								</ul>
-
-							</div>
-						</li>
+							<li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="флаг русский"></a>
+									<div class="dropdown-menu__content langs__submenu">
+											<ul class="langs__list">
+													<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../index.html">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="флаг английский"></a></li>
+													<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/index.html">CS<img class="langs-image" src="../assets/img/favicons/cz.svg" alt="флаг чешский"></a></li>
+											</ul>
+									</div>
+							</li>
 					</ul>
-
-				</div>
+			</div>
 			</nav>
 			<main>
 			<section class="section__landing">
