--- a/ru/startups.html
+++ b/ru/startups.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta property="description" content="Описание страницы">
-  <link rel="icon" href="assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
-  <link rel="icon" href="assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
-  <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-  <title>SFERA</title>
+  <meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
+	<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
+  <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
+  <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
 
   <link href="../assets/css/startups.css" rel="stylesheet">
@@ -149,16 +150,16 @@
       <div class="langs">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
-          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
-            <div class="dropdown-menu__content langs__submenu">
-              <ul class="langs__list">
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/startups.html">EN</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/startups.html">CS</a></li>
-              </ul>
-            </div>
-          </li>
+            <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="флаг русский"></a>
+                <div class="dropdown-menu__content langs__submenu">
+                    <ul class="langs__list">
+                        <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/startups.html">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="флаг английский"></a></li>
+                        <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/startups.html">CS<img class="langs-image" src="../assets/img/favicons/cz.svg" alt="флаг чешский"></a></li>
+                    </ul>
+                </div>
+            </li>
         </ul>
-      </div>
+    </div>
     </nav>
     <main>
       <section class="section__startups">
